@startuml diagram
class Main {
    - scanner: Scanner
    + main(String[] args): void
}

class Menu {
    + showMenu(Scanner scanner, Library... libraries): void
}

class Library {
    - name: String
    + addBook(Book book): void
    + getBooks(): List<Book>
}

class Book {
    - title: String
    - author: String
    - year: int
    + Book(String title, String author, int year)
    + getTitle(): String
    + getAuthor(): String
    + getYear(): int
}

Main --> Menu
Menu --> Library
Library --> Book
@enduml